# fsniper

./: AUTHORS  ChangeLog  Makefile.in  README  aclocal.m4  add_watches.c  add_watches.h  bootstrap  configure  configure.ac  example.conf  keyvalcfg.c  keyvalcfg.h  main.c  recurse_add.c  recurse_add.h  test.conf
bindings/: build  correctness.rb  keyvalcfg.c  keyvalcfg.rb  keyvalcfg_wrap.c  keyvalcfg_wrap.rb  pretty-print.rb  test.rb
contrib/: firefox.sh
doc/: doc.txt  keyvalcfg.html  keyvalcfg.txt
src/: Makefile  Makefile.am  Makefile.in  add_watches.c  add_watches.h  argparser.c  argparser.h  handle_event.c  handle_event.h  keyval_node.c  keyval_node.h  keyval_parse.c  keyval_parse.h  keyval_tokenize.c  keyval_tokenize.h  keyvalcfg.c  keyvalcfg.h  keyvalcfg_test.c  keyvalcfg_test.h  log.c  log.h  main.c  util.c  util.h  watchnode.c  watchnode.h
src/test/: keyval_test.c  keyval_test.cfg  keyvaltest.cfg
test/: 1  1.c  1.cfg  2.c  3.c  4.c  5  5.c  multiline-value.c  no-value.cfg  not-closed-2.cfg  not-closed.c  readme  suppressions  test.rb
test/common/: error.h
test/correctness/: 1.cfg  2.cfg  3.cfg  4.cfg  test.c
test/list-comment/: 1.cfg  test.c
test/list-comment-2/: 1.cfg  test.c
test/list-escape/: case.cfg  test.c
test/list-not-closed/: 3.cfg  test.c
test/multiline-value/: 1.cfg  2.cfg  3.cfg
test/no-value/: no-value.c  test.c
test/not-closed/: test.c
test/not-closed-2/: not-closed-2.c  test.c
test/parse-errors/: description.rb  error.c  list-not-closed-1.cfg  list-not-closed-2.cfg  list-not-closed-3.cfg  no-value-2.cfg  not-closed-1.cfg  not-closed-3.cfg  test.c
